--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 	<title>Plantilla simple. Cambiar fuente y colores</title>
 	<meta name="keywords" content="" />
 	<meta name="description" content="Plantilla simple de ejemplo de fuentes y colores CSS3" />
-	<link href="normalize.css" rel="stylesheet"/>
+	<!-- <link href="normalize.css" rel="stylesheet"/> -->
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 <header>
 	<h1>Plantilla simple</h1>
 	<h2>Fuentes y colores en CSS3</h2>
 </header>
-<nav>
+<nav id="menu">
 	<ul>
 		<li><a href="#">Home</a></li>
 		<li><a href="#">Products</a></li>
